# icml-paper-workflow

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude-plugin/: plugin.json
docs/: architecture.md  authoring-golden-tests.md  installation.md
docs/superpowers/plans/: 2026-07-14-authoring-requirements-intake.md
docs/superpowers/specs/: 2026-07-14-authoring-requirements-intake-design.md  2026-07-15-grouped-authoring-intake-design.md
scripts/: check_environment.py
skills/icml-paper-to-report-deck/: SKILL.md
slides/: package.json
slides/src/: cli.ts  load.ts  models.ts  notes.ts  render.ts  theme.ts
slides/src/__tests__/: geometry.test.ts  (+3 more)
src/paperflow/: cli.py  config.py  errors.py  manifest.py  paths.py
templates/report/: _quarto.yml  report-template.qmd  styles.css
tests/fixtures/: make_authoring_requirements.py  make_sample_pdf.py  valid-paper-ir.json  valid-storyboard.json  valid-visual-review.json
tests/integration/: test_end_to_end.py  test_golden_contracts.py
tests/unit/: test_asset_extractor.py  test_authoring_requirements.py  test_cli.py  test_config.py  test_consistency.py  test_environment_check.py  test_evidence_builder.py  test_finalize.py  test_ir_validation.py  test_manifest.py  test_mineru_api_parser.py  test_models.py  test_parser_chain.py  test_paths.py  test_preview.py  test_pymupdf_parser.py  test_report_renderer.py  test_report_scaffold.py  test_report_validator.py  test_requirements_validator.py  test_skill_contract.py  test_storyboard_validation.py
(+56 files in other folders)
