[project]
name = "icml-paper-workflow"
version = "0.1.0"
description = "Claude Code workflow for turning one research paper into a report and editable slide deck."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "pymupdf>=1.24,<2",
  "pillow>=10,<12",
  "pyyaml>=6,<7",
  "rich>=13,<15",
]

[project.optional-dependencies]
markitdown = ["markitdown[pdf]>=0.1,<1"]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "types-PyYAML>=6,<7",
]

[project.scripts]
paperflow = "paperflow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["paperflow"]
